[package]
name = "actix-multiresponse"
version = "0.1.0"
edition = "2021"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]
description = "actix-multiresponse intents to allow supporting multiple response/request data formats depending on the Content-Type and Accept headers"
readme = "README.md"
repository = "https://github.com/TobiasDeBruijn/actix-multiresponse"
license = "MIT OR Apache-2.0"
keywords = ["actix", "protobuf", "json", "serde"]
categories = ["encoding", "web-programming"]

[features]
default = ["json", "protobuf"]
json = ["serde"]
protobuf = ["prost", "actix-protobuf"]

[dependencies]
thiserror = "1.0"
log = "0.4"
cfg-if = "1.0.0"

[dependencies.actix-protobuf]
version = "0.7"
optional = true

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.actix-web]
version = "4.0"
default-features = false

[dependencies.prost]
version = "0.9"
default-features = false
optional = true

[dependencies.paperclip]
version = "0.7.0"
optional = true
default-features = false
features = ["actix4"]

[dev-dependencies]
serde = "1.0"
serde_derive = "1.0"
prost-derive = "0.9"
actix-macros = "0.2"
actix-rt = "2.7"
serde_json = "1.0"

[dev-dependencies.prost]
version = "0.9"
default-features = false
features = ["std"]
